[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/World.gd" type="Script" id=4]
[ext_resource path="res://import/music/Vortex.mp3" type="AudioStream" id=5]
[ext_resource path="res://scripts/Waves.gd" type="Script" id=6]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/InGame Menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/GameOver Menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Settings InGame Menu.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Card Selection.tscn" type="PackedScene" id=11]
[ext_resource path="res://import/sounds/generic/Bonus.ogg" type="AudioStream" id=12]
[ext_resource path="res://scripts/Border.gd" type="Script" id=13]
[ext_resource path="res://import/sounds/special/destroyed.ogg" type="AudioStream" id=14]
[ext_resource path="res://import/sounds/special/hit.ogg" type="AudioStream" id=15]
[ext_resource path="res://import/sounds/generic/Click.ogg" type="AudioStream" id=16]
[ext_resource path="res://scenes/Mobile Control.tscn" type="PackedScene" id=17]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0588235, 0.415686, 0.0196078, 1 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1 )

[sub_resource type="ProceduralSky" id=4]

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 4 )
background_color = Color( 0.0156863, 0.572549, 0.976471, 1 )
ambient_light_color = Color( 0.0627451, 0.917647, 0.698039, 1 )
glow_enabled = true

[node name="World" type="Spatial"]
script = ExtResource( 4 )

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 200, 0, 0, 0, 1, 0, 0, 0, 200, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Ground" type="StaticBody" parent="Ground"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/Ground"]
shape = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.305166, 0.46651, 0.364491 )

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 2, 0, 0, 0, 1.49997, 1.32291, 0, -1.32291, 1.49997, 0.135061, 12.5809, 11.486 )
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.994441, 0.0660482, 0.0820079, 0.101892, 0.800073, 0.591187, -0.0265655, 0.596256, -0.802355, 0, 3.88903, 0 )
shadow_enabled = true

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 11 )
speed = 20.0

[node name="Music" type="Spatial" parent="."]

[node name="SoundTrack1" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 5 )

[node name="SoundTrack2" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 5 )

[node name="Border" type="Spatial" parent="."]
script = ExtResource( 13 )

[node name="Waves" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="HitNotifySound" type="AudioStreamPlayer" parent="Waves"]
stream = ExtResource( 15 )

[node name="DestroyNotifySound" type="AudioStreamPlayer" parent="Waves"]
stream = ExtResource( 14 )

[node name="Level" type="Spatial" parent="."]

[node name="Sounds" type="Spatial" parent="."]

[node name="BonusTakeSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )

[node name="ClickSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )

[node name="UI" parent="." instance=ExtResource( 7 )]

[node name="InGame Menu" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Settings InGame Menu" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Card Selection" parent="." instance=ExtResource( 11 )]
visible = false

[node name="GameOver Menu" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Mobile Control" parent="." instance=ExtResource( 17 )]
